fix: wrong font import

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300..400&display=swap");
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 * {
   @apply font-inter text-white;
